@@ -1,0 +1,4 @@
+2003-11-27  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* RegexBugs.cs: added tests from bug #42529.
+
